--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body{
     background-color: #FBF9F1;
     text-align: center;
+    font-family: "Balsamiq Sans", sans-serif;
+    font-weight: 400;
 }
 #reg{
     background-color: white;
+    padding: 5px;
     left: 50%;
     margin: 0 auto;
     width: 300px;
@@ -15,18 +18,23 @@ h1{
     color: #92C7CF;
 }
 #em{
+    font-family: "Balsamiq Sans", sans-serif;
     background-color: #FBF9F1;
+    width: 200px;
     border-radius: 5px;
     border-width: 1.5px;
     margin: 5px;
 }
 #pass{
+    font-family: "Balsamiq Sans", sans-serif;
     background-color: #FBF9F1;
+    width: 200px;
     border-radius: 5px;
     border-width: 1.5px;
     margin: 5px;
 }
 #button{
+    font-family: "Balsamiq Sans", sans-serif;
     background-color: #E5E1DA;
     border: none;
     border-radius: 4px;
