--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 #nav{
     padding: 1px;
 }
-a{
+#nav a{
     background-color: white;
     padding: 8px;
     border-radius: 20px;
@@ -27,6 +27,11 @@ a{
     border-radius: 15px;
     box-shadow: 10px 10px 10px #E5E1DA;
 }
+#reg a{
+    text-decoration: none;
+    font-size: 11px;
+    color: #b2aca3;
+}
 h1{
     color: #92C7CF;
 }
@@ -44,7 +49,7 @@ h1{
     width: 200px;
     border-radius: 5px;
     border-width: 1.5px;
-    margin: 5px;
+    margin-top: 5px;
 }
 #button{
     font-family: "Balsamiq Sans", sans-serif;
@@ -52,7 +57,7 @@ h1{
     border: none;
     border-radius: 4px;
     padding: 10px;
-    margin: 25px;
+    margin: 15px;
     transition-duration: 0.4s;
 }
 #button:hover{
