--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 <body>
     <%- include("partials/header.ejs") %>
     <form action="/login" method="POST">
-        <div id="reg">
+        <div id="log">
             <h1 id="treg">Увійти</h1><br>
             <input type="email" required placeholder="Введіть емейл адресу" name="email" id="em"><br/>
             <input type="password" required placeholder="Введіть пароль" name="password" id="pass"><br>
