--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -22,9 +22,9 @@
             <a href="login.ejs" target="_self">Вже зареєстровані?</a><br>
             <div id="chos">
                 <p>Хто ви?</p>
-                <input type="radio" name="ts" id="tec" value="t">
+                <input type="radio" name="ts" id="tec" value="t" required>
                 <label for="tec">Викладач</label>
-                <input type="radio" name="ts" id="stud" value="s">
+                <input type="radio" name="ts" id="stud" value="s" required>
                 <label for="stud">Студент</label>
             </div>
             <div id="btn">
