--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,8 +16,8 @@
         <div id="log">
             <h1 id="treg">Увійти</h1><br>
             <div id="inem">
-                <input type="email" required placeholder="Введіть емейл адресу" name="email" id="em"><br/>
-                <input type="password" required placeholder="Введіть пароль" name="password" id="pass"><br>
+                <input type="email" required placeholder="Введіть емейл адресу" name="email" id="nreg"><br/>
+                <input type="password" required placeholder="Введіть пароль" name="password" id="nreg"><br>
             </div>
             <a href="registration.ejs" target="_self">Ще не зареєстровані?</a><br>
             <div id="message">
