--- a/views/oAuth.ejs
+++ b/views/oAuth.ejs
@@ -11,6 +11,10 @@
 </head>
 <body>
     <%- include("partials/header.ejs") %>
-    asdasda
+    <div id="auth">
+        <p>
+            Успішний вхід!
+        </p>
+    </div>
 </body>
 </html>
