--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -16,9 +16,9 @@
             <h1 id="ttec">Створити подію</h1><br>
             <div id="ev">
                 <input type="text" required placeholder="Введіть назву" value="Вільний час для броні" name="evName" id="evIn"><br/>
-                <input type="text" placeholder="Введіть опис" name="evDescr" id="evIn"><br>
-                <input type="datetime-local" required name="evDateSt" id="evIn" ><br>
-                <input type="datetime-local" required name="evDateEn" id="evIn" ><br>
+                <input type="text" placeholder="Введіть опис(не обов'язково)" name="evDescr" id="evIn"><br>
+                <input type="datetime-local" required name="evDateSt" min=<%= minTime%> id="evIn" ><br>
+                <input type="datetime-local" required name="evDateEn" min="2024-04-22T17:00" id="evIn" ><br>
             </div>
             <div id="message">
                 <script src="index.js"></script>
