--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -18,7 +18,7 @@
                 <input type="text" required placeholder="Введіть назву" value="Вільний час для броні" name="evName" id="evIn"><br/>
                 <input type="text" placeholder="Введіть опис(не обов'язково)" name="evDescr" id="evIn"><br>
                 <input type="datetime-local" required name="evDateSt" min=<%= minTime%> id="evIn" ><br>
-                <input type="datetime-local" required name="evDateEn" min="2024-04-22T17:00" id="evIn" ><br>
+                <input type="datetime-local" required name="evDateEn" min=<%= minTime%> id="evIn" ><br>
             </div>
             <div id="message">
                 <script src="index.js"></script>
