--- a/views/student.ejs
+++ b/views/student.ejs
@@ -11,10 +11,61 @@
 </head>
 <body>
     <%- include("partials/header.ejs") %>
-    <div>
-        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FKiev&bgcolor=%23ffffff&showPrint=0&showCalendars=0&showTabs=0&mode=MONTH&src=<%=userMail%>&color=%23039BE5" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-    </div>
+    <form action="/student" method="POST">
+        <div id="stec" class="searching">
+            <h1>Пошук викладача</h1><br>
+            <div id="ev">
+                <input type="text" required placeholder="Введіть прізвище" name="vsName" id="sIn"><br/>
+                <input type="text" placeholder="Введіть ім'я" name="vName" id="sIn"><br>
+            </div>
+            <div id="message">
+                <script src="index.js"></script>
+                <p id="wrng"><%= wrngMess%></p>
+            </div>
+            <div id="btn">
+                <input type="submit" id="button" value="Пошук">
+            </div>
+        </div>
+    </form>
+    <% if (arrayMail != "") { %>
+        <style>
+            #stec{
+                width: 1000px;
+            }
+            #stec.choosing{
+                height: 300px;
+            }
+            #stec.calendar{
+                height: 800px;
+            }
+        </style>
+        <form action="/student-tec" method="POST">
+            <div id="stec" class="choosing">
+                <h3>Знайдено викладачів:</h3>
+                <div id="ev">
+                    <% for(var i=0; i < arrayMail.length; i++) { %>
+                        <div>
+                            <input type="radio" id="arMail<%= i %>" name="tecMail" value="<%= arrayMail[i] %>">
+                            <label for="arMail<%= i %>"><%= i+1 %>. <%= arraySurname[i] %> <%= arrayName[i] %> <%= arrayMail[i] %></label>
+                        </div>
+                    <% } %>
+                </div>
+                <!-- <div id="message">
+                    <script src="index.js"></script>
+                    <p id="wrng"><%= wrngMess%></p>
+                </div> -->
+                <div id="btn">
+                    <input type="submit" id="button" value="Вибрати">
+                </div>
+            </div>
+        </form>
+    <% } %>
+    <% if (userMail != "") { %>
+     <div id="stec" class="calendar">
+        <div id="calendar">
+            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FKiev&bgcolor=%23ffffff&showPrint=0&showCalendars=0&showTabs=0&mode=MONTH&src=<%=userMail%>&color=%23039BE5" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
+     </div>
+    <% } %>
 </body>
 </html>
-
-<!-- c2hrbGlhcnNreWlfYWsyMkBudXdtLmVkdS51YQ -->
