--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -110,20 +110,43 @@ h3{
     text-align: center;
 }
 
+#ev.arrayEv{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+label.arrayEv{
+    background-color: #FBF9F1;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px #E5E1DA;
+    padding: 10px;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+}
+
+#arrayEv {
+    width: calc(33.33% - 20px); 
+    height: inherit;
+    margin-right: 20px; 
+    margin-bottom: 20px; 
+    display: inline-block; 
+    vertical-align: top; 
+    position: relative;
+}
 input[type="radio"] {
     position: absolute;
     opacity: 0;
     pointer-events: none;
 }
 
-/* Style the custom radio button */
 input[type="radio"] + label {
     display: inline-block;
     cursor: pointer;
     padding: 5px;
 }
 
-/* Style the custom radio button when selected */
 input[type="radio"]:checked + label {
     background-color: #92C7CF;
     color: #FBF9F1;
