--- a/views/student.ejs
+++ b/views/student.ejs
@@ -36,7 +36,7 @@
                 height: 300px;
             }
             #stec.calendar{
-                height: 800px;
+                height: 1100px;
             }
         </style>
         <form action="/student-tec" method="POST">
@@ -61,11 +61,25 @@
         </form>
     <% } %>
     <% if (userMail != "") { %>
-     <div id="stec" class="calendar">
-        <div id="calendar">
-            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FKiev&bgcolor=%23ffffff&showPrint=0&showCalendars=0&showTabs=0&mode=MONTH&src=<%=userMail%>&color=%23039BE5" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <form action="/student-cal">
+        <div id="stec" class="calendar">
+            <div id="calendar">
+                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FKiev&bgcolor=%23ffffff&showPrint=0&showCalendars=0&showTabs=0&mode=MONTH&src=<%=userMail%>&color=%23039BE5" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            </div>
+            <div id="ev" class="arrayEv">
+                <% for(var i=0; i < arraySum.length; i++) { %>
+                    <div id="arrayEv">
+                        <input type="radio" id="arEvent<%= i %>" name="tecEvent" value="<%= arraySum[i] %>">
+                        <label class="arrayEv" for="arEvent<%= i %>">
+                            <%= i+1 %>.<%= arraySum[i] %></br>
+                            <%= arrayStartTime[i] %></br>
+                            <%= arrayEndTime[i] %>
+                        </label>
+                    </div>
+                <% } %>
+            </div>
         </div>
-     </div>
+    </form>
     <% } %>
 </body>
 </html>
