--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -49,6 +49,12 @@ h3{
 #stec h3{
     text-align: center;
 }
+#freeTime h3{
+    text-align: center;
+}
+#stec.searching{
+    height: 220px;
+}
 #stec{
     background-color: white;
     padding: 5px;
@@ -57,7 +63,6 @@ h3{
     left: 50%;
     margin: 0 auto;
     width: 300px;
-    height: 220px;
     border-radius: 15px;
     box-shadow: 10px 10px 10px #E5E1DA;
 }
