Added terms of service

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -32,7 +32,7 @@
             </div>
             <div id="allow">
                 <input type="checkbox" name="allow" id="al" required>
-                <a href="privacy.ejs" target="_blank">Даю дозвіл!</a>
+                <a href="termsService.ejs" target="_blank">Даю дозвіл!</a>
             </div>
             <div id="btn">
                 <input type="submit" id="button" value="Зареєструватися">
