--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="k_M7C_ielSem6lmAHerPcQcJrpcHlPJt7wluBqNmuDo" />
     <title>ResTec</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
