--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -116,7 +116,7 @@ h3{
 }
 
 #ev.arrayEv{
-    display: flex;
+    /* display: flex; */
     flex-wrap: wrap;
 }
 
@@ -139,6 +139,7 @@ label.arrayEv{
     display: inline-block; 
     vertical-align: top; 
     position: relative;
+    
 }
 input[type="radio"] {
     position: absolute;
@@ -158,7 +159,8 @@ input[type="radio"]:checked + label {
     
 }
 #calendar{
-    margin: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     text-align: center;
 }
 
