Added instructions on home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,12 +13,52 @@
 <body>
     <%- include("partials/header.ejs") %>
     <div id="paragr">
-        <p>
-            ResTec - сайт створений для зручного бронювання викладача.
-        </p>
-        <p>
-            
-        </p>
+        <div id="instructions">
+            <p>
+                ResTec - сайт створений для зручного бронювання викладача.
+            </p>
+            <h3>Інструкція користуванням сайту:</h3>
+            <p>
+                Щоб почати користуватися сайтом вам необхідно увійти або зареєструватися. Для цього потрібно перейти у вкладку "Увійти". 
+                <img src="/images/Instr1.jpg" alt="">
+            </p>
+            <p>
+                Якщо ви ще не створювали користувача натисніть на посилання "Ще не зареєстровані?" та зареєструйтесь.
+                <img src="/images/Instr2.jpg" alt="">
+            </p>
+            <p>
+                Оскільки це тестовий вебсайт не вказуйте свій справжній пароль. Не забудьте вказати хто ви та надати дозвіл.
+                <img src="/images/Instr3.jpg" alt="">
+            </p>
+            <p>
+                Після успішної авторизації вам надійде відповідне повідомлення та відкриється нова вкладка. Відповідно кого ви обрали при реєстрації та й вкладка буде вам доступна.
+                <img src="/images/Instr4.jpg" alt=""> 
+            </p>
+            <p>
+                Для викладача потрібно обрати дату початку та дату кінця вільних годин.
+                <img src="/images/Instr5.jpg" alt="">
+            </p>
+            <p>
+                Після створення події у вашому Google Calendar з'явиться відповідний календар в якому в подальшому будуть відображатися ваші вільні години, а також броні.
+                <img src="/images/Instr6.jpg" alt="">
+            </p>
+            <p>
+                У разі видалення календаря ви не зможете створити подію, а також інші користувачі не зможуть записатися до вас. Приємного користування!
+                <img src="/images/Instr7.jpg" alt="">
+            </p>
+            <p>
+                Якщо ви студент то вам потрібно вписати у поле "Прізвище" Прізвище викладача, якого ви шукаєте, або залишити в цьому полі "Усіх" в цьому випадку вам будуть доступні усі викладачі.
+                <img src="/images/Instr8.jpg" alt="">
+            </p>
+            <p>
+                Як тільки ви знайдете потрібного вам викладача - оберіть його та натисніть "Вибрати".
+                <img src="/images/Instr9.jpg" alt="">
+            </p>
+            <p>
+                Вам буде доступно усі вільні години викладча. Ви можете обрати будь-яку. Ви будете записані на 30хв у той день, який ви обрали. Приємного користування!
+                <img src="/images/Instr10.jpg" alt="">
+            </p>
+        </div>
     </div>
 </body>
 </html>
