--- a/views/termsService.ejs
+++ b/views/termsService.ejs
@@ -1,4 +1,16 @@
-<h1>Website Terms and Conditions of Use</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ResTec</title>
+    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <h1>Website Terms and Conditions of Use</h1>
 
 <h2>1. Terms</h2>
 
@@ -40,8 +52,10 @@
 
 <h2>8. Your Privacy</h2>
 
-<p>Please read our Privacy Policy.</p>
+<p>Please read our <a href="privacy.ejs">Privacy Policy.</a></p>
 
 <h2>9. Governing Law</h2>
 
 <p>Any claim related to ResTec's Website shall be governed by the laws of ua without regards to its conflict of law provisions.</p>
+</body>
+</html>
