--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -25,14 +25,21 @@ h3{
 #button:hover{
     background-color: #AAD7D9;
 }
-#paragr{
-    text-align: left;
+#instructions{
+    margin: auto;
+    width: 1300px;
     background-color: white;
     border-radius: 20px;
     padding: 10px;
     padding-left: 25px;
     padding-right: 25px;
     box-shadow: 10px 10px 10px #E5E1DA;
+}
+#instructions h3{
+    text-align: center;
+}
+#instructions p{
+    text-align: center;
 }
 #auth{
     text-align: center;
