--- a/public/styles/headstyle.css
+++ b/public/styles/headstyle.css
@@ -7,6 +7,10 @@
     details{
         display: none;
     }
+    #stec.calendar{
+        width: 300px;
+        height: auto;
+    }
 }
 #navb{
     padding: 1px;
@@ -24,6 +28,10 @@ summary{
 #navs{
     display: block;
     text-align: center;
+}
+#stec.calendar{
+    width: 800px;
+    height: 1100px;
 }
 #navb a{
     background-color: white;
