--- a/views/oAuth.ejs
+++ b/views/oAuth.ejs
@@ -16,5 +16,37 @@
             Успішний вхід!
         </p>
     </div>
+    <script>
+       document.addEventListener("DOMContentLoaded", function() {
+            // Отримуємо дані з localStorage
+            const dataFromLocalStorage = localStorage.getItem('email');
+            
+            if (dataFromLocalStorage) {
+                // Кодуємо дані для використання в URL
+                const encodedData = encodeURIComponent(dataFromLocalStorage);
+
+                // Формуємо URL з параметрами запиту
+                const url = `/oAuth.ejs?data=${encodedData}&code=<%= code %>`;
+
+                // Відправляємо запит на сервер і обробляємо відповідь
+                fetch(url)
+                    .then(response => response.json())
+                    .then(data => {
+                        // Зберігаємо отримані дані в localStorage
+                        localStorage.setItem('orient', JSON.stringify(data.Orin));
+
+                        const orientIs = localStorage.getItem('orient');
+
+                        if (orientIs) {
+                            window.location.href = "/home.ejs";
+                        } else {
+                            window.location.href = "/oAuth.ejs?data=${encodedData}&code=<%= code %>";
+                        }
+
+                    })
+                    .catch(error => console.error('Error:', error));
+            }
+        });
+   </script>
 </body>
 </html>
