--- a/views/student.ejs
+++ b/views/student.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
     <%- include("partials/header.ejs") %>
-    <form action="/student" method="POST">
+    <form id="studentForm" action="/student" method="POST">
         <div id="stec" class="searching">
             <h1>Пошук викладача</h1><br>
             <div id="ev">
@@ -38,12 +38,8 @@
             #stec.choosing{
                 width: 410px;
             }
-            #stec.calendar{
-                width: 800px;
-                height: 1100px;
-            }
         </style>
-        <form action="/student-tec" method="POST">
+        <form id="studentTec" action="/student-tec" method="POST">
             <div id="stec" class="choosing">
                 <h3>Знайдено викладачів:</h3>
                 <div id="ev" class="teacher">
@@ -64,35 +60,40 @@
             <h3>Викладачів не знайдено. :(</h3>
         </div>
     <% } %>
-    <% if (userMail != "" ){ %>
-    <form action="/student-cal" method="POST">
-        <div id="stec" class="calendar">
-            <div id="calendar">
-                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FKiev&bgcolor=%23ffffff&showPrint=0&showCalendars=0&showTabs=0&mode=MONTH&src=<%=userMail%>&color=%23039BE5" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <% if (arraySum.length != []) { %>
-                <div id="ev" class="arrayEv">
-                    <% for(var i=0; i < arraySum.length; i++) { %>
-                        <div id="arrayEv">
-                            <input type="radio" id="arEvent<%= i %>" name="tecEvent" value="<%= arrayEvId[i] %>">
-                            <label class="arrayEv" for="arEvent<%= i %>">
-                                <%= i+1 %>.<%= arraySum[i] %></br>
-                                <%= arrayStartTime[i] %></br>
-                                <%= arrayEndTime[i] %>
-                            </label>
-                        </div>
-                    <% } %>
-                </div>
-                <div id="btn">
-                    <input type="submit" id="button" value="Записатися">
-                </div>
-            <% } else { %>
-                <div id="freeTime">
-                    <h3>Вільного часу не знайдено</h3>
-                </div>
-            <% } %>
-        </div>
-    </form>
-    <% } %>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const selectButton = document.getElementById('button');
+
+            if (selectButton) {
+                selectButton.addEventListener('click', function() {
+                    const selectedRadio = document.querySelector('input[type="radio"][name="tecMail"]:checked');
+                    if (selectedRadio) {
+                        const tecMail = selectedRadio.value;
+                        console.log(tecMail);
+                        // sessionStorage.setItem("tecMail", tecMail);
+
+                        const serverUrl = '/studentCalendar.ejs';
+
+                function sendTecMail() {
+                const url = `${serverUrl}?tecMail=${encodeURIComponent(tecMail)}`;
+                fetch(url, {
+                    method: 'GET'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Успіх:', data);
+                })
+                .catch((error) => {
+                    console.error('Помилка:', error);
+                });
+                }
+
+            // Виклик функції для надсилання даних
+                sendTecMail();
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 </html>
