--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
     <%- include("partials/header.ejs") %>
-    <form action="/teacher" method="POST">
+    <form id="eventForm" action="/teacher" method="POST">
         <div id="tec">
             <h1 id="ttec">Створити подію</h1><br>
             <div id="ev">
@@ -29,5 +29,34 @@
             </div>
         </div>
     </form>
+    <script>
+        document.getElementById('eventForm').addEventListener('submit', async function(event) {
+            event.preventDefault();
+
+            const email = localStorage.getItem('email');
+            const formData = new FormData(this);
+            formData.append('email', email);
+
+            const urlParams = new URLSearchParams();
+            formData.forEach((value, key) => {
+                urlParams.append(key, value);
+            });
+
+            try {
+                const response = await fetch('/teacher', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded'
+                    },
+                    body: urlParams.toString()
+                });
+
+                const result = await response.json();
+                console.log(1);
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        });
+    </script>
 </body>
 </html>
