Added some changes

--- a/views/student.ejs
+++ b/views/student.ejs
@@ -70,7 +70,7 @@
                     if (selectedRadio) {
                         const tecMail = selectedRadio.value;
                         const userMail = localStorage.getItem('email');
-                        console.log(tecMail);
+                        console.log(userMail);
                         // sessionStorage.setItem("tecMail", tecMail);
 
                         const serverUrl = '/studentCalendar.ejs';
