--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -62,6 +62,10 @@ h3{
 #stec.searching{
     height: 220px;
 }
+#stec.calendar{
+    width: 800px;
+    height: auto;
+}
 #stec{
     background-color: white;
     padding: 5px;
