--- a/views/successmessage.ejs
+++ b/views/successmessage.ejs
@@ -15,7 +15,7 @@
         <h3><p>
             <%= message %>
         </p></h3>
-        <h3 id="button"><a href="<%= eventLink %>" target="_blank">Посилання на подію</a></h3>
+        <h3 id="button"><a id="link" href="<%= eventLink %>" target="_blank">Посилання на подію</a></h3>
         
     </div>
     <script>
