--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -17,7 +17,9 @@
             <div id="ev">
                 <input type="text" required placeholder="Введіть назву" value="Вільний час для броні" name="evName" id="evIn"><br/>
                 <input type="text" placeholder="Введіть опис(не обов'язково)" name="evDescr" id="evIn"><br>
+                <label>Вкажіть дату початку події :</label><br>
                 <input type="datetime-local" required name="evDateSt" min=<%= minTime%> id="evIn" ><br>
+                <label>Кінця події :</label><br>
                 <input type="datetime-local" required name="evDateEn" min=<%= minTime%> id="evIn" ><br>
             </div>
             <div id="message">
