Added settings page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,7 @@
                 <img id="instrImage" src="/images/Instr6.jpg" alt="">
             </p>
             <p>
-                У Google Calendar в календарі "Час для бронювання" створиться ваша подія(у мобільній версії додатку Google Calendar може не відображатися, проте у веб-додатку все добре).У разі видалення календаря ви не зможете створити подію, а також інші користувачі не зможуть записатися до вас. Приємного користування!<br>
+                У Google Calendar в календарі "Час для бронювання" створиться ваша подія(у мобільній версії додатку Google Calendar може не відображатися, проте у веб-додатку все добре).У разі видалення календаря ви зможете створити новий у налаштуваннях. Приємного користування!<br>
                 <img id="instrImage" src="/images/Instr7.jpg" alt="">
             </p>
             <p>
