--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -69,6 +69,18 @@ h3{
     width: 800px;
     height: auto;
 }
+#setting{
+    text-align: center;
+    background-color: white;
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    left: 50%;
+    margin: 0 auto;
+    width: 300px;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px #E5E1DA;
+}
 #stec{
     background-color: white;
     padding: 5px;
